--- a/app/newsletter/post-01/page.module.css
+++ b/app/newsletter/post-01/page.module.css
@@ -118,7 +118,7 @@
   width: 100%;
   border: none;
   border-radius: 10px;
-  background: #191919;
+  background: #0d0d0d;
   margin: 28px 0;
 }
 
